Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
     </ul>
 
     <nav>
-      <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+      <p><a href="Industry.html">→ Learn about my role in the semiconductor industry!</a></p>
     </nav>
   </main>
   <footer>
     &copy; 2025 Royce's Core Values
   </footer>
 </body>
+
 </html>
