Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
     <nav>
       <p><a href="Industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+      <p><a href="index.html">→ Back to my personal values!</a></p>
     </nav>
   </main>
   <footer>
@@ -137,3 +138,4 @@
 </body>
 
 </html>
+
