Update Industry.html with additional navigation link
Added a link to learn more about the user's role in the semiconductor industry.

--- a/Industry.html
+++ b/Industry.html
@@ -86,10 +86,12 @@
 
     <nav>
   <p><a href="index.html">→ Back to my personal values!</a></p>
+  <p><a href="Industry.html">→ Learn about my role in the semiconductor industry!</a></p>
 </nav>
   </main>
   <footer>
     &copy; 2025 Royce • Intel Leadership
   </footer>
 </body>
+
 </html>
