Fix HTML encoding issues in Industry.html

--- a/Industry.html
+++ b/Industry.html
@@ -86,7 +86,7 @@
 
     <nav>
   <p><a href="index.html">→ Back to my personal values!</a></p>
-  <p><a href="Industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+  <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
 </nav>
   </main>
   <footer>
@@ -95,3 +95,4 @@
 </body>
 
 </html>
+
