--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </ul>
 
     <nav>
-      <p><a href="Industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+      <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
       <p><a href="index.html">→ Back to my personal values!</a></p>
     </nav>
   </main>
@@ -138,4 +138,5 @@
 </body>
 
 </html>
+
 
