Add navigation link to semiconductor industry role
Added a navigation link to learn about the role in the semiconductor industry.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
       <li>Maturity is the thread that weaves together authenticity, determination, diligence, and kindness—it’s how I show up with wisdom and balance.</li>
     </ul>
 
-    
+    <nav>
+      <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+    </nav>
   </main>
   <footer>
     &copy; 2025 Royce's Core Values
@@ -135,6 +137,7 @@
 </body>
 
 </html>
+
 
 
 
