Add navigation link in industry.html
Added navigation link to return to personal values page.

--- a/industry.html
+++ b/industry.html
@@ -84,6 +84,9 @@
       <li>Employee training on phishing and social engineering threats</li>
     </ul>
 
+    <nav>
+  <p><a href="index.html">→ Back to my personal values!</a></p>
+</nav>
   </main>
   <footer>
     &copy; 2025 Royce • Intel Leadership
@@ -91,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
