Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </ul>
 
     <nav>
-      <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+      <p><a href="/industry.html">→ Learn about my role in the semiconductor industry!</a></p>
     </nav>
   </main>
   <footer>
@@ -137,6 +137,7 @@
 </body>
 
 </html>
+
 
 
 
