--- a/industry.html
+++ b/industry.html
@@ -85,7 +85,7 @@
     </ul>
 
     <nav>
-  <p><a href="index.html">→ Back to my personal values!</a></p>
+  <p><a href="index.html"→ Back to my personal values!</a></p>
 </nav>
   </main>
   <footer>
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
