Fix HTML structure and update footer content

--- a/index.html
+++ b/index.html
@@ -128,15 +128,16 @@
     </ul>
 
     <nav>
-      <p><a href="industry.html"→ Learn about my role in the semiconductor industry!</a></p>
+      <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
     </nav>
   </main>
   <footer>
-    &copy; 2025 Royce's Core Values
+    <h1>2025 Royce's Core Values</h1>
   </footer>
 </body>
 
 </html>
+
 
 
 
