Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
     </nav>
   </main>
   <footer>
-    <h1>2025 Royce's Core Values</h1>
+     &copy; 2025 Royce's Core Values
   </footer>
 </body>
 
 </html>
+
 
 
 
