--- a/industry.html
+++ b/industry.html
@@ -85,15 +85,17 @@
     </ul>
 
     <nav>
-  <p><a href="index.html">→ Back to my personal values!</a></p>
-</nav>
+  <a href="index.html">→ Back to my personal values!</a> |
+  <a href="industry.html">→ Learn about my role in the semiconductor industry!</a>
+    </nav>
   </main>
   <footer>
-    &copy; 2025 Royce • Intel Leadership
+    <p>&copy; 2025 Royce • Intel Leadership</p>
   </footer>
 </body>
 
 </html>
+
 
 
 
