Fix HTML formatting and update footer content

--- a/index.html
+++ b/index.html
@@ -128,15 +128,17 @@
     </ul>
 
     <nav>
-      <p><a href="industry.html">→ Learn about my role in the semiconductor industry!</a></p>
+  <a href="index.html">→ Back to my personal values!</a> |
+  <a href="industry.html">→ Learn about my role in the semiconductor industry!</a>
     </nav>
   </main>
   <footer>
-     &copy; 2025 Royce's Core Values
+     <p>&copy; 2025 Royce's Core Values</p>
   </footer>
 </body>
 
 </html>
+
 
 
 
