--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
       <li>Maturity is the thread that weaves together authenticity, determination, diligence, and kindness—it’s how I show up with wisdom and balance.</li>
     </ul>
 
-    <nav>
- <a href="industry.html">→ Learn about my role in the semiconductor industry!</a>
+   <nav>
+  <a href="index.html">→ Back to my personal values!</a> |
+  <a href="industry.html">→ Learn about my role in the semiconductor industry!</a>
     </nav>
   </main>
   <footer>
@@ -137,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
