Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </ul>
 
    <nav>
-  <a href="index.html">→ Back to my personal values!</a> |
-  <a href="industry.html">→ Learn about my role in the semiconductor industry!</a>
+  <a href="index.html">→ My Personal Values</a> |
+  <a href="industry.html">→ My Role in the Semiconductor Industry!</a>
     </nav>
   </main>
   <footer>
@@ -138,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
