Fix HTML encoding issues in industry.html

--- a/industry.html
+++ b/industry.html
@@ -84,9 +84,9 @@
       <li>Employee training on phishing and social engineering threats</li>
     </ul>
 
-    <nav>
-  <a href="index.html">→ Back to my personal values!</a> |
-  <a href="industry.html">→ Learn about my role in the semiconductor industry!</a>
+     <nav>
+  <a href="index.html">→ My Personal Values</a> |
+  <a href="industry.html">→ My Role in the Semiconductor Industry!</a>
     </nav>
   </main>
   <footer>
@@ -95,6 +95,7 @@
 </body>
 
 </html>
+
 
 
 
